nullaway_error_F8AD9A29-827D-4706-9D05-302F5E5E7847.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/ObjectOptimisticLockingFailureException.java:46: error: [NullAway] passing @Nullable parameter 'msg' where @NonNull is required
		super(msg, cause);
		      ^
    (see http://t.uber.com/nullaway )
